# Image-Processing-IMPA-2015

./: .gitignore  README.md
build-features-Desktop_Qt_5_5_0_GCC_64bit-Debug/: Makefile  moc_mainwindow.cpp  qrc_resources.cpp  qt-opencv  ui_mainwindow.h
build-qt-opencv-Desktop_Qt_5_5_0_GCC_64bit-Debug/: Makefile  moc_mainwindow.cpp  qrc_resources.cpp  qt-opencv  ui_mainwindow.h
build-qt-opencv-Desktop_Qt_5_5_0_clang_64bit-Debug/: Makefile  moc_mainwindow.cpp  qrc_resources.cpp  ui_mainwindow.h
build-qt-opencv-Desktop_Qt_5_5_0_clang_64bit-Debug/qt-opencv.app/Contents/: Info.plist
build-qt-opencv-Desktop_Qt_5_5_0_clang_64bit-Debug/qt-opencv.app/Contents/MacOS/: qt-opencv
cameraCalibration/: CMakeLists.txt  Readme.md  configuration.xml  example.cpp
cameraCalibration/example/: configuration.json
cameraCalibration/include/: CameraCalibrator.h  ImageCapturer.h
cameraCalibration/src/: CameraCalibrator.cpp  ImageCapturer.cpp  Main.cpp
features/: #features_report.lyx#  features.pro  features_report.lyx  features_report.lyx~  featuresdetector.cpp  featuresdetector.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
qt-opencv/: mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  scalespacecomputer.cpp  scalespacecomputer.h
scale_space/: mainwindow.cpp  mainwindow.ui  qt-opencv.pro  resources.qrc
tracking/: features_report.lyx  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  tracking.pro  tracking_report.lyx
